# repopilot-view

./: .dockerignore  .env.example  .gitignore  ARCHITECTURE_V2.md  BUGLOG.md  Dockerfile  LICENSE  README.md  pyproject.toml  requirements.txt  run_trace.py
data/: .gitignore  README.md  schema.json
docs/: 2026-07-05-technical-adjustments.md  COLLECTOR.md  ENGINEERING_LOG.md  MEMORY_DESIGN.md  MEMORY_DESIGN_V2.md  long-term-memory-design.md
eval/: agent_v2_harness.py  c1_flash_10.json  c1_gpt55_subset.json  failure_taxonomy.py  freeformat_gpt55_subset.json  harness.py  mem_runA_build.json  mem_runB_on.json  report.py  run_c1_subset.sh  run_freeformat_subset.sh
examples/: candidate_issues.md
scripts/: collect_dataset.py  collect_v2.py
src/: __init__.py  agent.py  agent_loop.py  cache.py  cli.py  graph.py  http_client.py  llm.py  logging_config.py  main.py  new_agent.py  patch_match.py  patch_repair.py  rate_limiter.py  retrieval.py  run_store.py  schemas.py  state.py  tools.py  tracer.py
tests/: bench_pydantic.py  conftest.py  quick_bench.py  test_agent.py  test_agent_loop.py  test_agent_v2_eval.py  test_budget_scaling.py  test_cache.py  test_cli.py  test_collect_dataset.py  test_context_loop_brake.py  test_convergence_diversity.py  test_decision_frame.py  test_decision_schemas.py  test_error_episodes.py  test_eval_report.py  test_execute_install.py  test_failure_taxonomy.py  test_http_client.py  test_json_extract.py  test_llm.py  test_llm_json_tolerance.py  test_locate_bm25.py  test_locate_fallback.py  test_logging_config.py  test_main.py  test_memory.py  (+15 more)
(+17 files in other folders)
