[build-system]
requires = ["setuptools>=61"]
build-backend = "setuptools.build_meta"

[project]
name = "repopilot"
version = "0.1.0"
description = "AI-powered GitHub issue → fix PR, with self-reflective agent loop"
readme = "README.md"
license = {text = "MIT"}
authors = [{name = "Morgan Fu", email = "maogenfu0121@163.com"}]
requires-python = ">=3.10"
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Software Development :: Quality Assurance",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
]
dependencies = [
    "aiosqlite",
    "fastapi",
    "httpx",
    "pydantic",
    "python-dotenv",
    "tenacity",
    "uvicorn",
    "langgraph",
]

[project.urls]
Homepage = "https://github.com/FMorgan-111/repopilot-view"
Repository = "https://github.com/FMorgan-111/repopilot-view"
Issues = "https://github.com/FMorgan-111/repopilot-view/issues"

[project.scripts]
repopilot = "src.cli:main"

[tool.setuptools.packages.find]
where = ["."]
include = ["src", "src.*"]
